# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py
gendiff/modules/: cli.py  diff.py  formatter.py  formatters.py  parser.py
gendiff/modules/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/re/: diff.py
gendiff/scripts/: gendiff.py  generateDiff.py
tests/: test_json_diff.py
tests/fixtures/results/: result1.txt  result_json.txt
tests/fixtures/yaml/: file31.yml  file32.yml
